tests/vertical-slice/reject/unknown_named_array_type.hew
// Reject: an array that contains a named user type that is declared nowhere.
// F1 reports the undefined element type at the resolution site with `unknown
// type `Foo``, ahead of the D10 MIR-boundary `UnknownType` fail-closed (which
// remains as defense-in-depth). It must not panic.
fn f(x: [Foo; 2]) -> [Foo; 2] {
    return x;
}
